# teste

./: CMakeLists.txt  README.md  main.cpp
include/: config.h  logger.h  scraper.h
output/: log_file.txt  mercado_livre_data.txt
src/: config.cpp  logger.cpp  scraper.cpp
